--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ html, body {
   width: 100vw;
   padding: 30px;
   gap: 40px;
-  background-image: url('lego_bg.jpg');
+  background-image: url('/lego_bg.jpg');
   background-position: center 60px;
   background-size: cover;
   background-repeat: no-repeat;
