--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,10 @@
 html, body {
   margin: 0;
   padding: 0;
+  height:100%;
   line-height: 1.8;
+  overflow: hidden;
+  font-family: 'Inter', sans-serif;
 }
 
 .app-container {
@@ -142,17 +145,18 @@ html, body {
 }
 
 .landing-screen {
+  background-size:cover;
+  background-repeat: no-repeat;
   position: fixed;
   inset: 0;
   z-index: 999;
-  background-color: #4dd07b;
+  background-image: url(red_bg.jpg);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: 'Segoe UI', sans-serif;
   font-size: 36px;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 20px;
   text-align: center;
   transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
@@ -163,20 +167,33 @@ html, body {
 .slide-out {
   transform: translateY(-100%);
   opacity: 0;
-  pointer-events: none;
+  pointer-events: none;;
 }
 
 .start-button {
   margin-top: 20px;
-  padding: 24px 104px;
+  padding: 20px 90px;
   font-size: 32px;
-  background-color: #ff9800;
-  border: none;
+  font-weight: bold;
+  
+  background-color: (255, 255, 255, 0.8);
+  border: rgb(255, 204, 0) 5px solid;
   border-radius: 22px;
   cursor: pointer;
   transition: background-color 0.6s ease, transform 0.2s ease;
+  z-index: 1000;
 }
 
 .start-button:hover {
   transform: scale(1.05);
+  border-color: rgb(26, 255, 0);
+}
+
+h1{
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  margin-bottom: 20px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 7px 30px;
+  border-radius: 50px;
 }
