--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,15 @@
 html, body {
   margin: 0;
   padding: 0;
-  height:100%;
+  min-height:100%;
   line-height: 1.8;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   font-family: 'Inter', sans-serif;
+  background-image: url('/lego_bg.jpg');
+  background-position: center 60px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .app-container {
@@ -14,10 +19,6 @@ html, body {
   width: 100vw;
   padding: 30px;
   gap: 40px;
-  background-image: url('/lego_bg.jpg');
-  background-position: center 60px;
-  background-size: cover;
-  background-repeat: no-repeat;
   overflow: hidden;
   box-sizing: border-box;
 }
@@ -196,4 +197,13 @@ h1{
   background-color: rgba(255, 255, 255, 0.8);
   padding: 7px 30px;
   border-radius: 50px;
+}
+
+.footer {
+  margin-left:10px;
+  text-align: center;
+  padding: 10px;
+  font-size: 14px;
+  color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.35);
 }
