--- a/src/styles.css
+++ b/src/styles.css
@@ -24,18 +24,21 @@ html, body {
 }
 
 .input-panel {
+  display: flex;
+  flex:1;
+  flex-direction: column;
   text-align: center;
   max-height: 1000px;
-  padding: 20px;
   border-radius: 25px;
   background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .lego-img {
+  flex:2;
   margin: 35px 0 100px 85px;
+  aspect-ratio: 1 /1;
   max-width: 210px;
-  height: 40%;
   border-radius: 7px;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -54,24 +57,34 @@ html, body {
 }
 
 .set-input {
-  margin-top: 20px;
-  padding: 14px 18px;
+  flex:0.5;
   font-size: 28px;
-  width: 80%;
   border: 5px solid rgb(253, 164, 0);
   border-radius: 10px;
   outline: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   transition: border-color 0.2s ease-in-out, transform 0.2s ease-in-out;
+  width: 85%;
+  margin-left:20px;
 }
 
 .set-input:hover {
   transform: scale(1.03);
 }
-
 .set-input:focus {
   border-color: rgb(26, 255, 0);
 }
+h5{
+  padding-top:25px;
+  flex:1;
+  color: rgb(0, 0, 0);
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-family: 'Arial', sans-serif;
+}
+
 
 .display-panel {
   flex: 2;
