--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ html, body {
   overflow-y: auto;
   font-family: 'Inter', sans-serif;
   background-image: url('/lego_bg.jpg');
-  background-position: center 60px;
+  background-position: center 50px;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -75,11 +75,13 @@ html, body {
   border-color: rgb(26, 255, 0);
 }
 h5{
+  max-width:85%;
+  margin: 0 auto;
   padding-top:25px;
   flex:1;
   color: rgb(0, 0, 0);
-  font-size: 18px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 530;
   margin-top: 10px;
   margin-bottom: 20px;
   font-family: 'Arial', sans-serif;
