--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ html, body {
   overflow-y: auto;
   font-family: 'Inter', sans-serif;
   background-image: url('/lego_bg.jpg');
-  background-position: center 50px;
+  background-position: center -45px;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -34,9 +34,19 @@ html, body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.input-panel1 {
+  display: flex;
+  flex:1;
+  flex-direction: column;
+  text-align: center;
+  max-height: 1000px;
+  border-radius: 25px;
+  background-color: rgba(17, 241, 73, 0.07);
+  box-shadow: 0 4px 8px rgba(1, 47, 20, 0.3);
+}
 .lego-img {
-  flex:2;
-  margin: 35px 0 100px 85px;
+  flex:1;
+  margin: 40px auto 30px auto;
   aspect-ratio: 1 /1;
   max-width: 210px;
   border-radius: 7px;
@@ -95,6 +105,19 @@ h5{
   border-radius: 25px;
   background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.display-panel1 {
+  flex: 2;
+  min-width: 400px;
+  padding: 30px;
+  border-radius: 25px;
+  background-color: rgba(17, 241, 73, 0.07);
+  box-shadow: 0 4px 8px rgba(1, 47, 20, 0.3);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -221,4 +244,27 @@ h1{
   font-size: 14px;
   color: rgb(0, 0, 0);
   background-color: rgba(255, 255, 255, 0.35);
+}
+
+.suggestion-box {
+  border: 1px solid #ccc;
+  background-color: #fff;
+  margin:auto;
+  padding:2px;
+  max-height: 150px;
+  overflow-y: auto;
+  padding: 0px;
+  list-style:none;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  width: 90%;
+  z-index: 1000;
+}
+
+.suggestion-box li {
+  padding: 0.5px;
+  cursor: pointer;
+}
+
+.suggestion-box li:hover {
+  background-color: #9ae7b030;
 }
