--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
 html, body {
   margin: 0;
   padding: 0;
-  min-height:100%;
-  line-height: 1.8;
+  height:100%;
+  line-height: 1.5;
   overflow-x: hidden;
   overflow-y: auto;
   font-family: 'Inter', sans-serif;
   background-image: url('/lego_bg.jpg');
-  background-position: center -45px;
+  background-position: center 50px;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -19,7 +19,6 @@ html, body {
   width: 100vw;
   padding: 30px;
   gap: 40px;
-  overflow: hidden;
   box-sizing: border-box;
 }
 
@@ -34,16 +33,6 @@ html, body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.input-panel1 {
-  display: flex;
-  flex:1;
-  flex-direction: column;
-  text-align: center;
-  max-height: 1000px;
-  border-radius: 25px;
-  background-color: rgba(17, 241, 73, 0.07);
-  box-shadow: 0 4px 8px rgba(1, 47, 20, 0.3);
-}
 .lego-img {
   flex:1;
   margin: 40px auto 30px auto;
@@ -74,8 +63,7 @@ html, body {
   outline: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   transition: border-color 0.2s ease-in-out, transform 0.2s ease-in-out;
-  width: 85%;
-  margin-left:20px;
+  margin: auto;
 }
 
 .set-input:hover {
@@ -91,10 +79,7 @@ h5{
   flex:1;
   color: rgb(0, 0, 0);
   font-size: 16px;
-  font-weight: 530;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  font-family: 'Arial', sans-serif;
+  font-weight: 500;
 }
 
 
@@ -111,18 +96,6 @@ h5{
   gap: 20px;
 }
 
-.display-panel1 {
-  flex: 2;
-  min-width: 400px;
-  padding: 30px;
-  border-radius: 25px;
-  background-color: rgba(17, 241, 73, 0.07);
-  box-shadow: 0 4px 8px rgba(1, 47, 20, 0.3);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-}
 
 .set-name {
   color: rgb(20, 72, 230);
@@ -188,7 +161,7 @@ h5{
   background-repeat: no-repeat;
   position: fixed;
   inset: 0;
-  z-index: 999;
+  z-index: 100;
   background-image: url(/red_bg.jpg);
   display: flex;
   flex-direction: column;
@@ -206,7 +179,6 @@ h5{
 .slide-out {
   transform: translateY(-100%);
   opacity: 0;
-  pointer-events: none;;
 }
 
 .start-button {
@@ -215,7 +187,7 @@ h5{
   font-size: 32px;
   font-weight: bold;
   
-  background-color: (255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
   border: rgb(255, 204, 0) 5px solid;
   border-radius: 22px;
   cursor: pointer;
@@ -244,19 +216,18 @@ h1{
   font-size: 14px;
   color: rgb(0, 0, 0);
   background-color: rgba(255, 255, 255, 0.35);
+  
 }
 
 .suggestion-box {
   border: 1px solid #ccc;
   background-color: #fff;
   margin:auto;
-  padding:2px;
   max-height: 150px;
   overflow-y: auto;
-  padding: 0px;
   list-style:none;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  width: 90%;
+  width: 80%;
   z-index: 1000;
 }
 
