--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ html, body {
   overflow-y: auto;
   font-family: 'Inter', sans-serif;
   background-image: url('/lego_bg.jpg');
-  background-position: center 50px;
+  background-position: center 0px;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -17,8 +17,8 @@ html, body {
   flex-direction: row;
   height: 100vh;
   width: 100vw;
-  padding: 30px;
-  gap: 40px;
+  padding: 15px;
+  gap: 30px;
   box-sizing: border-box;
 }
 
@@ -238,4 +238,14 @@ h1{
 
 .suggestion-box li:hover {
   background-color: #9ae7b030;
+}
+
+.title{
+  margin: 15px auto auto 0px;
+  padding: 0px;
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', serif;
+  font-size:24px;
+  color: rgb(238, 178, 12);
+  font-weight:100px;
 }
