--- a/src/styles.css
+++ b/src/styles.css
@@ -34,13 +34,13 @@ html, body {
 }
 
 .lego-img {
-  flex:1;
+  flex:1.7;
   margin: 40px auto 30px auto;
   aspect-ratio: 1 /1;
   max-width: 210px;
   border-radius: 7px;
   background-color: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   transition: transform 0.2s ease-in-out;
 }
@@ -57,13 +57,14 @@ html, body {
 
 .set-input {
   flex:0.5;
-  font-size: 28px;
+  font-size: 24px;
   border: 5px solid rgb(253, 164, 0);
   border-radius: 10px;
   outline: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   transition: border-color 0.2s ease-in-out, transform 0.2s ease-in-out;
   margin: auto;
+  padding:0px;
 }
 
 .set-input:hover {
@@ -102,6 +103,11 @@ h5{
   font-size: 30px;
   font-weight: 650;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  transition: transform 0.2s ease-in-out;
+}
+.set-name:hover {
+  transform: scale(1.04);
+  color: rgb(0, 0, 0);
 }
 
 .image-box {
@@ -133,6 +139,11 @@ h5{
   text-align: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   transition: transform 0.2s ease-in-out;
+  margin:auto;
+}
+
+.set-details:hover {
+  transform: scale(1.04);
 }
 
 @media (max-width: 768px) {
@@ -162,7 +173,7 @@ h5{
   position: fixed;
   inset: 0;
   z-index: 100;
-  background-image: url(/red_bg.jpg);
+  background-image: url(/abstract.jpg);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -171,15 +182,10 @@ h5{
   color: rgb(0, 0, 0);
   padding: 20px;
   text-align: center;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
   transform: translateY(0);
   opacity: 1;
 }
 
-.slide-out {
-  transform: translateY(-100%);
-  opacity: 0;
-}
 
 .start-button {
   margin-top: 20px;
@@ -187,8 +193,8 @@ h5{
   font-size: 32px;
   font-weight: bold;
   
-  background-color: rgba(255, 255, 255, 0.8);
-  border: rgb(255, 204, 0) 5px solid;
+  background-color: rgba(255, 255, 255, 0.85);
+  border: rgb(255, 204, 0) 7px solid;
   border-radius: 22px;
   cursor: pointer;
   transition: background-color 0.6s ease, transform 0.2s ease;
@@ -204,7 +210,7 @@ h1{
   color: rgb(0, 0, 0);
   font-weight: bold;
   margin-bottom: 20px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.75);
   padding: 7px 30px;
   border-radius: 50px;
 }
@@ -242,10 +248,42 @@ h1{
 
 .title{
   margin: 15px auto auto 0px;
-  padding: 0px;
+  padding: 0px 20px;
   text-align: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', serif;
   font-size:24px;
   color: rgb(238, 178, 12);
   font-weight:100px;
+  background-color: rgba(0,0,0, 0.5);
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius:20px;
+}
+
+.option-button-dad{
+  flex:1;
+  display: flex;
+  flex-direction:row;
+  justify-content: center;
+  padding: auto;
+}
+
+
+.option-button {
+  padding: 5px 10px;
+  margin:auto 10px;
+  font-size: 14px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.85);
+  border: rgb(255, 204, 0) 3px solid;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.option-button:hover {
+  transform: scale(1.05);
+  border-color: rgb(26, 255, 0);
 }
